[package]
authors = [
  "Linfeng Qian <thewawar@gmail.com>",
  "Nervos Core Dev <dev@nervos.org>",
]
description = "Rust SDK for CKB"
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb-sdk-rust"
license = "MIT"
name = "ckb-sdk"
repository = "https://github.com/nervosnetwork/ckb-sdk-rust"
resolver = "2"
version = "5.0.0"
[dependencies]
anyhow = "1.0.63"
async-trait = "0.1"
bech32 = "0.8.1"
bytes = "1"
dashmap = "5.4"
derive-getters = "0.2.1"
dyn-clone = "1.0"
futures = "0.3"
jsonrpc-core = "18"
log = "0.4.6"
lru = "0.7.1"
reqwest = {version = "0.12", default-features = false, features = ["json", "cookies"]}
secp256k1 = {version = "0.30.0", features = ["recovery"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
tokio = {version = "1", features = ["time"]}
tokio-util = {version = "0.7.7", features = ["codec"]}

bitflags = "1.3.2"
ckb-crypto = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-dao-utils = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-hash = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-jsonrpc-types = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-resource = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-script = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-system-scripts-v0_5_4 = {package = "ckb-system-scripts", version = "=0.5.4"}
ckb-system-scripts-v0_6_0 = {package = "ckb-system-scripts", version = "=0.6.0"}
ckb-traits = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-types = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
enum-repr-derive = "0.2.0"
hex = "0.4"
sha3 = "0.10.8"

# for feature test
ckb-chain-spec = {git = "https://github.com/nervosnetwork/ckb", branch = "develop"}
ckb-mock-tx-types = "1.0.0"
rand = {version = "0.7.3", optional = true}

async-iterator = "2.3.0"
sparse-merkle-tree = {version = "0.6", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2.16", features = ["js"]}
tokio_with_wasm = {version = "0.8.2", features = ["time"]}
web-time = "1.1.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rce = ["sparse-merkle-tree"]
rustls-tls = ["reqwest/rustls-tls"]
test = ["rce", "rand", "default-tls"]

[dev-dependencies]
clap = {version = "4.4.18", features = ["derive"]}
httpmock = "0.6"
tempfile = "3.19.1"
